SERVER-4138 give specific error on reserved Windows db name

If the user tries to create a database on the Windows version
of mongod that uses a name that is reserved on Windows, give a
specific error stating that the chosen name is reserved.  Display
the assertion code when any uassert testing for an invalid name
is triggered.